--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
                     </div>
           
                     <div class="aboutImg">
-                        <img src="images/about-img.jpg">
+                        <img src="assets/images/about-img.jpg">
                     </div>
                 </section>
           </body>
