--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,10 +12,10 @@
               </div>
           </div>
           <div class="social-icons" id="contact">
-              <i class="social-icon"><img src="images/igicon.png" alt="igicon" /> </i>
-              <i class="social-icon"><img src="images/facebookicon.png" alt="fbicon" /></i>
-              <i class="social-icon"><img src="images/limkedinicon.png" alt="linkeinicon" /></i>
-              <i class="social-icon"><img src="images/github-mark-white.png" alt="giticon" /></i>
+              <i class="social-icon"><img src="assets/images/igicon.png" alt="igicon" /> </i>
+              <i class="social-icon"><img src="assets/images/facebookicon.png" alt="fbicon" /></i>
+              <i class="social-icon"><img src="assets/images/limkedinicon.png" alt="linkeinicon" /></i>
+              <i class="social-icon"><img src="assets/images/github-mark-white.png" alt="giticon" /></i>
           </div>
           <div class="footer-line"></div>
           <p class="footer-copyright">&copy;2024 All Rights Served</p>
