--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
               </div>
           </div>
           <div class="image">
-              <img src="images/main-img.jpg">
+              <img src="assets/images/main-img.jpg">
           </div>
       </section>
 
