--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -4,14 +4,14 @@
       <section class="carousel">
           <a class="projectLinks" href="TodoApp">
               <div class="carousel-item">
-                  <img src="images/todoapp.png" alt="Project 1" />
+                  <img src="assets/images/todoapp.png" alt="Project 1" />
                   <h3>To Do App</h3>
                   <p>JavaScript To do app using local storage</p>
               </div>
           </a>
           <a class="projectLinks" href="">
               <div class="carousel-item">
-                  <img src="images/lowpolybuilding_Bockova.jpg" alt="" placeholder="img" />
+                  <img src="assets/images/lowpolybuilding_Bockova.jpg" alt="" placeholder="img" />
 
                   <h3>Low Poly Building</h3>
                   <p>A low-poly red three-story building with balconies, a staircase, a street lamp, and traffic cones, set on a corner lot.</p>
@@ -19,7 +19,7 @@
           </a>
           <a class="projectLinks" href="">
               <div class="carousel-item">
-                  <img src="images/ROAMIA.png" alt="" placeholder="img" />
+                  <img src="assets/images/ROAMIA.png" alt="" placeholder="img" />
 
                   <h3>Travel Agency</h3>
                   <p>ROAMIA is a travel agency offering unique adventures with themed vehicles, creating unforgettable journeys to breathtaking destinations.</p>
