--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <section class="main" id="main">
           <div class="text">
               <p>Welcome to my portfolio</p>
@@ -18,5 +19,10 @@
           <div class="image">
               <img src="assets/images/main-img.jpg">
           </div>
+        
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+     
       </section>
-
+   
+   
