--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
                             This portfolio is a collection of my projects <br />so far, giving you a peek at my journey in IT
                         </p>
                         <div class="hireMe-container">
-                            <a href="#contact">
+                            <a href="contact">
                                 <button class="hireMe">Hire me</button>
                             </a>
                         </div>
