--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,10 +9,10 @@
               </p>
               <div class="buttons-container">
                   <div class="contactbuttons">
-                      <a href="ContactPage">Contact me</a>
+                      <a href="contact">Contact me</a>
                   </div>
                   <div class="projectsbuttons">
-                      <a href="ProjectPage">My projects</a>
+                      <a routerLink="projects">My projects</a>
                   </div>
               </div>
           </div>
